# discord-chat-llm

./: LICENSE  README.md  bot.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
config/: settings.py
discord_llm/: __init__.py  bot.py  help.py
discord_llm/commands/: __init__.py  garfield_commands.py  image_commands.py  utility_commands.py
discord_llm/models/: model_handler.py
